--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^2.0.0",
     "nuxt": "^3.2.3",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "@nuxt/types": "^2.16.0"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "vuex": "^4.0.2"
   }
 }
